# tweet-sentiment-faang

./: Dockerfile  README.md  desktop.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py
src/api/: main.py
src/dashboard/: app.py
src/data/: mock_twitter.py  twitter_client.py
src/models/: sentiment_analyzer.py
src/utils/: logger.py
